# punyecs

./: .readthedocs.yaml  README.md  pyproject.toml
docs/source/: api.rst  conf.py  index.rst
src/punyecs/: __init__.py
tests/: test_basic.py
