[project]
name = "punyecs"
version = "0.1.0"
description = "A simple attribute-based approach to ECS."
readme = "README.md"
authors = [
    { email = "csumnicht@berkeley.edu" }
]
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
docs = [
    "sphinx>=9.0.4",
    "sphinx-automodapi>=0.22.0",
]
